lab1/Test/L1-A-5-47.output
Error Type B at Line 2
Error Type A at Line 3
Error Type B at Line 4
Error Type A at Line 4
Error Type A at Line 8
Error Type B at Line 10
Error Type A at Line 13
