lab1/Test/L1-A-5-47.cmm
float i8RAqJfyI ( ) {
  int DSVFyag9Z [ ] = u9_tODM ;
  int cXTsMLZ2AyLL `;
  if snjPPvicD )   if ( `YJVllvRxV )   RmEAkDWo_Pgw012J 
    ;


}%
int 
struct {
}E7588ygz34HoWITBb ( ) {
}
&struct {
}bevMjmL 
;
struct hAnb_m3fdDiBFZhv3 eYB1sf3a ( ) {
}
